--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>PDF → OpenAI Demo (Headless)</title>
+  <title>Miro → Lovable (Build with URL)</title>
   <script src="https://miro.com/app/static/sdk/v2/miro.js"></script>
 </head>
 <body>
 <script>
 (async function init() {
-  // === CONFIG (Production defaults) ===
-  const BACKEND_URL = "https://miro-app-mcp.vercel.app";
-  const MODEL = "gpt-5.2";
+  // ============================
+  // CONFIG
+  // ============================
+  const TARGET_FRAME_TITLE = "lovable"; // Frame title to scope content (case-insensitive)
+  const BUTTON_MARKER = "DT_LOVABLE_BUTTON_V1";
+  const BUTTON_LABEL_TEXT = "🚀 Lovable: Generate App";
+  const BUTTON_SUBTEXT = `Frame: ${TARGET_FRAME_TITLE}`;
+  const LOVABLE_BASE_URL = "https://lovable.dev/?autosubmit=true#prompt="; // Build-with-URL :contentReference[oaicite:4]{index=4}
 
-  // === Existing OKR Action (unchanged) ===
-  const ACTION_EVENT = "analyze-okr";
-  const CUSTOM_EVENT = `custom:${ACTION_EVENT}`;
+  // Board app data keys (persist per board)
+  const APPDATA_BUTTON_ID_KEY = "dt_lovable_button_id_v1";
+  const APPDATA_FRAME_ID_KEY = "dt_lovable_frame_id_v1";
 
-  // === MCP Table→Stickies (Auto) ===
-  const TABLE_MCP_EVENT = "table-to-stickies-mcp";
-  const TABLE_CUSTOM_EVENT = `custom:${TABLE_MCP_EVENT}`;
+  // Debounce to prevent double-open
+  let lastLaunchAt = 0;
 
+  // ============================
+  // Helpers: notifications
+  // ============================
   function truncate80(s) {
     const t = String(s || "").replace(/\s+/g, " ").trim();
     return t.length > 80 ? (t.slice(0, 77) + "...") : t;
@@ -34,198 +41,318 @@
   }
 
   // ============================
-  // Existing: PDF → OKR (UNCHANGED)
+  // Helpers: app data
   // ============================
-  async function callBackend(boardId, itemId) {
-    const payload = {
-      boardId,
-      itemId,
-      model: MODEL
-    };
+  async function getAppDataKey(key) {
+    // board.getAppData("key") supported; get-all supported without args. :contentReference[oaicite:5]{index=5}
+    try {
+      const v = await miro.board.getAppData(key);
+      return v;
+    } catch (e1) {
+      try {
+        const all = await miro.board.getAppData();
+        if (all && typeof all === "object") {
+          return all[key];
+        }
+      } catch (e2) {}
+    }
+    return undefined;
+  }
 
-    const res = await fetch(`${BACKEND_URL}/api/analyze-selected-pdf`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
+  async function setAppDataKey(key, value) {
+    try {
+      await miro.board.setAppData(key, value);
+      return true;
+    } catch (e1) {
+      try {
+        const obj = {};
+        obj[key] = value;
+        await miro.board.setAppData(obj);
+        return true;
+      } catch (e2) {}
+    }
+    return false;
+  }
+
+  // ============================
+  // Find frame by title
+  // ============================
+  function normalizeTitle(s) {
+    return String(s || "").trim().toLowerCase();
+  }
+
+  async function findTargetFrame() {
+    // Get frames via Web SDK get by type. :contentReference[oaicite:6]{index=6}
+    const frames = await miro.board.get({ type: ["frame"] });
+    const wanted = normalizeTitle(TARGET_FRAME_TITLE);
+
+    if (Array.isArray(frames)) {
+      for (const f of frames) {
+        const t = normalizeTitle(f && f.title);
+        if (t === wanted) return f;
+      }
+    }
+    return null;
+  }
+
+  // ============================
+  // Ensure board button exists (shape)
+  // ============================
+  function shapeHasMarker(shape) {
+    const content = String(shape && shape.content ? shape.content : "");
+    return content.indexOf(BUTTON_MARKER) !== -1;
+  }
+
+  function shapeLooksLikeButton(shape) {
+    const content = String(shape && shape.content ? shape.content : "").toLowerCase();
+    return content.indexOf("lovable") !== -1 && content.indexOf("generate") !== -1;
+  }
+
+  function toHtmlButtonContent() {
+    // Keep a hidden marker so we can re-find it reliably
+    return (
+      `<p><strong>${escapeHtml(BUTTON_LABEL_TEXT)}</strong></p>` +
+      `<p style="font-size:12px;opacity:.8;">${escapeHtml(BUTTON_SUBTEXT)}</p>` +
+      `<p style="font-size:10px;opacity:.01;">${BUTTON_MARKER}</p>`
+    );
+  }
+
+  function escapeHtml(s) {
+    return String(s || "")
+      .replaceAll("&", "&amp;")
+      .replaceAll("<", "&lt;")
+      .replaceAll(">", "&gt;");
+  }
+
+  async function getShapeById(id) {
+    if (!id) return null;
+    try {
+      const arr = await miro.board.get({ id: id });
+      if (Array.isArray(arr) && arr.length) return arr[0];
+      if (arr && typeof arr === "object") return arr;
+    } catch (e) {}
+    return null;
+  }
+
+  async function findExistingButtonShape() {
+    // First: appData id
+    const savedId = await getAppDataKey(APPDATA_BUTTON_ID_KEY);
+    if (savedId) {
+      const item = await getShapeById(savedId);
+      if (item && item.type === "shape") return item;
+    }
+
+    // Second: search shapes for marker
+    const shapes = await miro.board.get({ type: ["shape"] });
+    if (Array.isArray(shapes)) {
+      for (const s of shapes) {
+        if (shapeHasMarker(s)) return s;
+      }
+      // Fallback heuristic
+      for (const s of shapes) {
+        if (shapeLooksLikeButton(s)) return s;
+      }
+    }
+    return null;
+  }
+
+  async function ensureLovableButton() {
+    const frame = await findTargetFrame();
+    if (!frame) {
+      await notifyError(`Frame "${TARGET_FRAME_TITLE}" not found. Create a frame titled "${TARGET_FRAME_TITLE}".`);
+      return null;
+    }
+
+    // Remember frame id
+    await setAppDataKey(APPDATA_FRAME_ID_KEY, frame.id);
+
+    // Button exists?
+    const existing = await findExistingButtonShape();
+    if (existing && existing.type === "shape") {
+      // Try to keep it inside frame (best-effort)
+      try {
+        if (typeof frame.add === "function") {
+          await frame.add(existing);
+          if (typeof frame.sync === "function") await frame.sync();
+        }
+      } catch (e) {}
+      await setAppDataKey(APPDATA_BUTTON_ID_KEY, existing.id);
+      return existing;
+    }
+
+    // Create new shape button near top-right inside the frame
+    const fx = Number.isFinite(frame.x) ? frame.x : 0;
+    const fy = Number.isFinite(frame.y) ? frame.y : 0;
+    const fw = Number.isFinite(frame.width) ? frame.width : 1600;
+    const fh = Number.isFinite(frame.height) ? frame.height : 900;
+
+    const btnW = 340;
+    const btnH = 120;
+
+    // frame coordinates are board-level; place inside frame
+    const bx = fx + (fw / 2) - (btnW / 2) - 40;
+    const by = fy - (fh / 2) + (btnH / 2) + 40;
+
+    const btn = await miro.board.createShape({
+      content: toHtmlButtonContent(),
+      shape: "round_rectangle",
+      x: bx,
+      y: by,
+      width: btnW,
+      height: btnH
     });
 
-    const text = await res.text();
-    if (!res.ok) {
-      throw new Error(`Backend ${res.status}: ${text}`);
-    }
-
+    // Add to frame so it moves with it
     try {
-      return JSON.parse(text);
-    } catch (e) {
-      return { raw: text };
+      if (btn && typeof frame.add === "function") {
+        await frame.add(btn);
+        if (typeof frame.sync === "function") await frame.sync();
+      }
+    } catch (e) {}
+
+    if (btn && btn.id) {
+      await setAppDataKey(APPDATA_BUTTON_ID_KEY, btn.id);
     }
+
+    return btn;
   }
-
-  async function runForCurrentSelection() {
-    const boardInfo = await miro.board.getInfo();
-    const boardId = boardInfo && boardInfo.id ? boardInfo.id : null;
-    if (!boardId) {
-      throw new Error("No boardId available.");
-    }
-
-    const selection = await miro.board.getSelection();
-    if (!Array.isArray(selection) || selection.length !== 1) {
-      await notifyError("Select exactly 1 PDF document.");
-      return;
-    }
-
-    const item = selection[0];
-    if (!item || !item.id) {
-      await notifyError("Selection has no item id.");
-      return;
-    }
-
-    await notifyInfo("OKR analysis started…");
-
-    const data = await callBackend(boardId, item.id);
-
-    if (data && data.createdDocId) {
-      await notifyInfo("OKR doc created on board.");
-      return;
-    }
-    if (data && data.createdTextId) {
-      await notifyInfo("OKR output created (text fallback).");
-      return;
-    }
-
-    await notifyInfo("OKR analysis finished.");
-  }
-
-  await miro.board.ui.on(CUSTOM_EVENT, async () => {
-    try {
-      await runForCurrentSelection();
-    } catch (e) {
-      await notifyError(e && e.message ? e.message : String(e));
-    }
-  });
-
-  try { await miro.board.experimental.action.deregister(ACTION_EVENT); } catch (e) {}
-
-  await miro.board.experimental.action.register({
-    event: ACTION_EVENT,
-    ui: {
-      label: { en: "Analyze OKR" },
-      icon: "chat-two",
-      description: "Analyze selected PDF and write the OKR result to a board doc."
-    },
-    scope: "local",
-    selection: "single",
-    predicate: { type: "document" },
-    contexts: { item: {} }
-  });
 
   // ============================
-  // MCP: Table → Stickies (Auto)
+  // Build Lovable prompt (MCP pull from Miro)
   // ============================
-  async function callTableMcpBackend(boardId, tableItemId) {
-    const payload = { boardId, tableItemId };
-
-    const res = await fetch(`${BACKEND_URL}/api/table-to-stickies-mcp`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
-
-    const text = await res.text();
-    if (!res.ok) {
-      throw new Error(`Backend ${res.status}: ${text}`);
-    }
-
-    try {
-      return JSON.parse(text);
-    } catch (e) {
-      return { raw: text };
-    }
+  function buildBoardUrlFromId(boardId) {
+    // Web SDK v2 getInfo is "bare" (id only). :contentReference[oaicite:7]{index=7}
+    // We construct a standard board URL. If your org uses a different domain, Lovable can still use boardId in MCP tools.
+    const encoded = encodeURIComponent(String(boardId || ""));
+    return `https://miro.com/app/board/${encoded}/`;
   }
 
-  async function runTableToStickiesMcpForSelection() {
-    const boardInfo = await miro.board.getInfo();
-    const boardId = boardInfo && boardInfo.id ? boardInfo.id : null;
-    if (!boardId) {
-      throw new Error("No boardId available.");
-    }
+  function buildLovablePrompt(boardId) {
+    const boardUrl = buildBoardUrlFromId(boardId);
 
-    const selection = await miro.board.getSelection();
-    if (!Array.isArray(selection) || selection.length !== 1) {
-      await notifyError("Select exactly 1 table item (or the table object) before running.");
-      return;
-    }
-
-    const item = selection[0];
-    if (!item || !item.id) {
-      await notifyError("Selection has no item id.");
-      return;
-    }
-
-    await notifyInfo("Table → Stickies (MCP) started…");
-
-    const data = await callTableMcpBackend(boardId, item.id);
-
-    if (data && data.ok) {
-      await notifyInfo(`Created ${data.createdCount} stickies.`);
-      return;
-    }
-
-    await notifyInfo("Table → Stickies finished.");
+    // Keep prompt concise (Lovable prompt max 50k; long URLs may fail). :contentReference[oaicite:8]{index=8}
+    // MCP tools: context_explore, board_list_items (filter by parent), context_get (Docs -> HTML). :contentReference[oaicite:9]{index=9}
+    return [
+      "Build a web app from the following Miro board content.",
+      "",
+      "Miro MCP is connected in this Lovable workspace.",
+      `Board URL: ${boardUrl}`,
+      `Scope: ONLY content inside the frame titled "${TARGET_FRAME_TITLE}" (case-insensitive). Ignore everything else.`,
+      "",
+      "MCP procedure (strict):",
+      "1) Call context_explore on the board. Find the frame whose title matches the scope title and capture its item id + url.",
+      "2) Call board_list_items with a parent container filter set to that frame id. Include item types: document, sticky_note, text.",
+      "3) For each document in that frame: call context_get to extract full HTML (treat as product/spec/prompt).",
+      "4) For sticky notes: use their text/content as requirements, features, constraints, user stories.",
+      "",
+      "Deliverable:",
+      "- Generate the application in Lovable end-to-end.",
+      "- Prefer a simple, working MVP architecture first.",
+      "- Keep requirements traceable: mention the Miro doc/sticky ids you used when translating into features."
+    ].join("\n");
   }
 
-  // Custom action handler (if it shows up somewhere)
-  await miro.board.ui.on(TABLE_CUSTOM_EVENT, async () => {
+  function buildLovableUrl(prompt) {
+    const enc = encodeURIComponent(prompt);
+    return LOVABLE_BASE_URL + enc;
+  }
+
+  async function openLovableFromBoard(boardId) {
+    const prompt = buildLovablePrompt(boardId);
+    const url = buildLovableUrl(prompt);
+
+    // Try to open in new tab. If blocked, copy to clipboard and notify.
+    let opened = false;
     try {
-      await notifyInfo("Custom action fired.");
-      await runTableToStickiesMcpForSelection();
+      const w = window.open(url, "_blank", "noopener,noreferrer");
+      opened = !!w;
     } catch (e) {
-      await notifyError(e && e.message ? e.message : String(e));
+      opened = false;
     }
-  });
 
-  // Register MCP table action (kept, but NOT required for usage)
-  try { await miro.board.experimental.action.deregister(TABLE_MCP_EVENT); } catch (e) {}
+    if (!opened) {
+      try {
+        await navigator.clipboard.writeText(url);
+        await notifyInfo("Lovable URL copied to clipboard (paste into browser).");
+        return;
+      } catch (e) {
+        // last fallback: notify shortened
+        await notifyError("Popup blocked and clipboard unavailable. Open Lovable manually from the app logs.");
+        return;
+      }
+    }
 
-  await miro.board.experimental.action.register({
-    event: TABLE_MCP_EVENT,
-    ui: {
-      label: { en: "Table → Stickies (MCP Auto)" },
-      icon: "sparkles",
-      description: "Read selected table via Miro MCP and create a sticky for each cell."
-    },
-    scope: "local",
-    selection: "single",
-    contexts: { item: {} }
-  });
+    await notifyInfo("Opening Lovable…");
+  }
 
   // ============================
-  // ICON CLICK = reliable trigger for Table → Stickies (no table right-click needed)
+  // Trigger: click the board button (selection:update)
+  // ============================
+  let selectionHandling = false;
+
+  await miro.board.ui.on("selection:update", async (event) => {
+    if (selectionHandling) return;
+    selectionHandling = true;
+
+    try {
+      const items = event && Array.isArray(event.items) ? event.items : [];
+      if (items.length !== 1) return;
+
+      const selected = items[0];
+      if (!selected || selected.type !== "shape") return;
+
+      const btnId = await getAppDataKey(APPDATA_BUTTON_ID_KEY);
+      const isOurButton =
+        (btnId && selected.id === btnId) ||
+        shapeHasMarker(selected) ||
+        shapeLooksLikeButton(selected);
+
+      if (!isOurButton) return;
+
+      const now = Date.now();
+      if (now - lastLaunchAt < 2500) return;
+      lastLaunchAt = now;
+
+      const info = await miro.board.getInfo();
+      const boardId = info && info.id ? info.id : null;
+      if (!boardId) {
+        await notifyError("No boardId available.");
+        return;
+      }
+
+      await openLovableFromBoard(boardId);
+
+      // Optional: deselect to avoid accidental re-trigger
+      try { await miro.board.deselect(selected.id); } catch (e) {}
+    } finally {
+      selectionHandling = false;
+    }
+  }); // :contentReference[oaicite:10]{index=10}
+
+  // ============================
+  // Trigger: icon click (setup + fallback launch)
   // ============================
   await miro.board.ui.on("icon:click", async () => {
+    // icon:click is dispatched only to headless/main iframe :contentReference[oaicite:11]{index=11}
     try {
-      const selection = await miro.board.getSelection();
-      if (!Array.isArray(selection) || selection.length !== 1) {
-        await notifyInfo("Select 1 table, then click the app icon to create stickies (MCP). PDFs: right-click → Analyze OKR.");
-        return;
+      const btn = await ensureLovableButton();
+      if (btn && btn.id) {
+        await notifyInfo(`Button ready. Click "${BUTTON_LABEL_TEXT}" on the board.`);
       }
-
-      // If user selected a PDF document, we keep production behavior: use right-click action.
-      const item = selection[0];
-      const t = item && item.type ? String(item.type) : "unknown";
-      if (t === "document") {
-        await notifyInfo("PDF selected. Use right-click → Analyze OKR.");
-        return;
-      }
-
-      // Otherwise: try MCP table → stickies on the selected item id
-      await runTableToStickiesMcpForSelection();
     } catch (e) {
       await notifyError(e && e.message ? e.message : String(e));
     }
   });
 
-  await notifyInfo("Ready: PDFs → right-click → Analyze OKR. Tables → select table → click app icon (MCP) to create stickies.");
+  // ============================
+  // Bootstrap: try to ensure button exists on load
+  // ============================
+  try {
+    await ensureLovableButton();
+    await notifyInfo(`Ready. Click the board button "${BUTTON_LABEL_TEXT}".`);
+  } catch (e) {
+    await notifyError(e && e.message ? e.message : String(e));
+  }
 })();
 </script>
 </body>
